# SW403_Proj

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  start.py
data/: simple_test_case.py
src/: __init__.py
src/agents/: __init__.py  rag_agent.py
src/api/: __init__.py  main.py  models.py  service.py  system_prompt.txt  utils.py
src/chunking/: __init__.py  ast_chunker.py  base.py  code.py  context_chunker.py  function_chunker.py  graph_chunker.py  recursive.py
src/config/: settings.py
src/frontend/: index.html
src/frontend/src/: App.tsx
src/frontend/src/components/: CodeSnippet.tsx  ComparisonMode.tsx  GraphView.tsx  Header.tsx  MetricsPanel.tsx  QueryInput.tsx  ReasoningTrace.tsx  ResultsPanel.tsx  Sidebar.tsx
src/frontend/src/data/: mockData.ts
src/frontend/src/types/: index.ts
src/loaders/: __init__.py  python_files.py  web.py
src/retrieval/: __init__.py  graph_store.py  pipeline.py  selfcheckgpt.py
