[project]
name = "proj-draft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.0",
    "fastapi>=0.115.0",
    "graph-rag-example-helpers>=0.8.0",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-graph-retriever>=0.8.0",
    "langchain-groq>=1.0.0",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "python-multipart>=0.0.9",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.32.0",
]
